# k8s_kserve_custom_predictors

./: .gitignore  README.md
.github/workflows/: docker-build-base-images.yaml  docker-build-kserve-torch.yml  docker-build-models.yaml  docker-build-models.yml
common/base/cpu/: Dockerfile.cpu  pyproject.toml  readme.md
common/base/gpu/: Dockerfile.gpu  pyproject.toml  readme.md
common/kserve/torch/: __init__.py  setup.py
common/kserve/torch/cpu/: Dockerfile.torch.cpu  readme.md
common/kserve/torch/gpu/: Dockerfile.torch.gpu  readme.md
common/kserve/torch/gpu-flash/: Dockerfile.torch.gpu-flash  readme.md
common/kserve/torch/kserve_torch/: __init__.py  base_model.py
gliner/: Dockerfile  guide.md  model.py  pyproject.toml  test.py
models/fast-vlm-0-5-b/: Dockerfile  model.py  readme.md
models/florence/: Dockerfile  model.py  readme.md
models/gliner/: Dockerfile  model.py  readme.md
models/image/: Dockerfile  model.py  readme.md
models/image_embed/: Dockerfile  model.py  readme.md
models/kokoro/: Dockerfile  model.py  readme.md
models/phi-4/: Dockerfile  model.py  readme.md
models/whisper/: dockerfile  model.py  readme.md
oci/: .env.example  Dockerfile  OCI_README.md  build-oci-models.cmd  download.py  pyproject.toml
oci/florence-2-large/: Dockerfile  README.md
