[tool.poetry]
name = "cfg-model-service-base-gpu"
version = "0.1.0"
description = "CFG Model Service Base Image for GPU"
authors = ["Ryan Weiler <rweiler@deloitte.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = {extras = ["standard"], version = ">=0.115.11,<0.116.0"}
pydantic = ">=2.10.6,<3.0.0"
pydantic-settings = ">=2.8.1,<3.0.0"
kserve = "0.14.1"

[poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"